fix images on small screens

--- a/app/assets/stylesheets/bold-theme-bootstrap/_image_versions.scss
+++ b/app/assets/stylesheets/bold-theme-bootstrap/_image_versions.scss
@@ -1,11 +1,13 @@
 .container {
   img.bootstrap_full {
     margin: 30px auto;
+    width: 100%;
     max-width: 700px;
     display: block;
   }
   img.bootstrap_half {
     margin: 30px;
+    width: 50%;
     max-width: 350px;
     display: inline-block;
   }
